<resources>
    <string name="app_name">EMEL - PMN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicles">Vehicles</string>
    <string name="parks">Parks</string>
    <string name="other">Others</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="park_me_now" translatable="false">Park Me Now</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="availability">Availability</string>
    <string name="distance">Distance</string>
    <string name="last_updated">Last Updated</string>
    <string name="license_plate">License Plate</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="registration_date">Registration Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="parks_list">Parks list</string>
    <string name="parks_map">Parks map</string>
    <string name="service_points">Service Points</string>
    <string name="general_emel">General EMEL</string>
    <string name="blocked_vehicles">Blocked Vehicles</string>
    <string name="service_point1_name" translatable="false">Loja do Cidadão do Saldanha</string>
    <string name="service_point1_address" translatable="false">Mercado 31 de Janeiro, Rua Engenheiro Vieira da Silva</string>
    <string name="service_point2_name" translatable="false">Loja do Cidadão das Laranjeiras</string>
    <string name="service_point2_address" translatable="false">Rua Abranches Ferrão, 10</string>
    <string name="service_point3_name" translatable="false">Edifício central do Município de Lisboa</string>
    <string name="service_point3_address" translatable="false">Campo Grande, 25</string>
    <string name="general_emel_phone" translatable="false">211163060</string>
    <string name="blocked_vehicles_phone" translatable="false">217803131</string>
    <string name="schedule_monday_friday">Monday to Friday</string>
    <string name="schedule_saturday">Saturday</string>+
    <string name="schedule_weekend_holidays">Weekends and Holidays</string>
    <string name="schedule_8am_8pm">8am to 8pm</string>
    <string name="schedule_8am_00am">8am to 0am</string>
    <string name="schedule_830am_730pm">8.30am to 7.30pm</string>
    <string name="schedule_9am_3pm">9am to 3pm</string>
    <string name="schedule_930am_3pm">9.30am to 3pm</string>
    <string name="schedule_9am_6pm">9am to 6pm</string>
    <string name="schedule_9am_7pm">9am to 7pm</string>
    <string name="phone">Phone</string>
    <string name="schedule">Schedule</string>
    <string name="fax_number" translatable="false">217813699</string>
    <string name="welcome">Welcome</string>
    <string name="distance_km">Distance (km)</string>
    <string name="navigate">NAVIGATE</string>
    <string name="no_internet_connection_alert">You have</string>
    <string name="park_vehicle">Park Vehicle</string>
    <string name="park">Park</string>
    <string name="unpark">Unpark</string>
    <string name="check_park">Check Park</string>
    <string name="main_menu">Main Menu</string>
    <string name="verify_towed_car">verify towed car</string>
    <string name="zone">Zone</string>
    <string name="filters">Filters</string>
    <string name="parks_could_not_be_loaded">Parks could not be loaded</string>
    <string name="please_connect_to_the_internet">Please connect to the internet</string>
    <string name="empty">Empty</string>
    <string name="potentially_full">Potentially Full</string>
    <string name="all">All</string>
    <string name="surface">Surface</string>
    <string name="structure">Structure</string>
    <string name="you_have_no_vehicles">You have no Vehicles</string>
    <string name="press_the_button_below_to_add_one">Press the button below to add one</string>
    <string name="you_are_deleting_a_vehicle">You\'re deleting a vehicle</string>
    <string name="are_you_sure">Are you sure you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_parks_available">Warning: There\'s no parks available</string>
    <string name="no_internet_connection">Warning: No Internet Connection</string>
    <string name="no_vehicles">Warning: You have no vehicles</string>
    <string name="cannot_proceed">We cannot proceed</string>
    <string name="data_cannot_proceed">Your data may be outdated, do you wish to proceed?</string>
    <string name="battery_low">You\'re battery is low</string>
    <string name="change_darkmode_battery">Do you want to change to dark mode to save battery?</string>
    <string name="add_vehicles">Do you wish to add one?</string>
    <string name="please_enter_license_plate">Please select your vehicle license plate</string>
    <string name="proceed">Proceed</string>
    <string name="darkMode">Enable dark mode</string>
    <string name="lowBateryDarkmode_title">Enable dark mode when in low battery</string>
    <string name="lowBateryDarkmode_description">Change automatic to dark mode when battery is low</string>
    <string name="darkModeAtNight_title">Enable dark mode at night</string>
    <string name="darkModeAtNight_description">Change automatic to dark mode at night</string>
    <string name="shakeFilters_title">Shaking Filters</string>
    <string name="shakeFilters_description_1">Reset filters while shaking phone is enabled</string>
    <string name="shakeFilters_description_2">Enable reset filters when phone is shaked</string>
    <string name="name_label">"Name: "</string>
    <string name="availability_label">"Availability: "</string>
    <string name="type_label">"Type: "</string>
    <string name="distance_label">"Distance: "</string>
    <string name="zone_label">"Zone: "</string>
    <string name="last_updated_label">"Last Updated: "</string>
    <string name="brand_label">"Brand: "</string>
    <string name="model_label">"Model: "</string>
    <string name="license_plate_label">"License Plate: "</string>
    <string name="registration_date_label">"Registration Date: "</string>


</resources>
