<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/nav_parks_list"
            android:icon="@drawable/ic_parks"
            android:title="@string/parks_list" />

        <item
            android:id="@+id/nav_parks_map"
            android:icon="@drawable/ic_map"
            android:title="@string/parks_map" />

        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_vehicles"
            android:title="@string/vehicles" />

    </group>
    <item android:title="@string/other">
        <menu>

            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/ic_contacts"
                android:title="@string/contacts" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>