<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="16"
    tools:context=".ui.fragments.ContactsBlockedVehiclesFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/phone"/>

    <Button
        android:id="@+id/blocked_vehicles_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_phone"
        android:drawableTint="@color/white"
        android:text="@string/blocked_vehicles_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="bottom"
        android:layout_weight="1"
        android:text="@string/schedule"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="16dp"
        android:weightSum="2"
        android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/schedule_8am_00am"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/schedule_monday_friday"/>
        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="16dp"
        android:weightSum="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/schedule_9am_6pm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule_weekend_holidays"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:padding="16dp"
        android:weightSum="7"
        android:gravity="bottom"
        android:orientation="vertical">

    <Button
        android:id="@+id/button_send_sms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:drawableLeft="@drawable/ic_sms"
        android:drawableTint="@color/white"
        style="@style/Widget.App.Info.Button"
        android:drawablePadding="6dp"
        android:text="@string/verify_towed_car" />

    </LinearLayout>

</LinearLayout>