<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="19"
    android:padding="16dp"
    tools:context=".ui.fragments.VehicleFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_license_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/license_plate">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="8"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="32"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="32"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_registration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_calendar"
            android:hint="@string/registration_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="none"
                android:textIsSelectable="true"
                android:focusable="false"
                android:maxLength="10"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.App.Deletion.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_height="match_parent"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_confirm"
            style="@style/Widget.App.Confirmation.Button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_height="match_parent"
            android:text="@string/confirm" />

    </LinearLayout>

</LinearLayout>