<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="16"
    android:padding="16dp"
    tools:context=".ui.fragments.ParkDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:labelFor="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:labelFor="@id/text_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/text_distance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_zone"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:labelFor="@id/text_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/zone" />

                <TextView
                    android:id="@+id/text_zone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:labelFor="@id/text_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/schedule" />

            <TextView
                android:id="@+id/text_schedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <LinearLayout
                android:labelFor="@id/text_type"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_schedule"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:labelFor="@id/text_last_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/last_updated" />

                <TextView
                    android:id="@+id/text_last_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:weightSum="5"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:padding="10dp"
            android:orientation="horizontal">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingRight="8dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_park_vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/emelLightBlue"
                    android:text="@string/park_vehicle"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_navigate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/navigate"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>